--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ function hilangkan() {document.getElementById("sticky-ad").style = "bottom: -130
        async function pertama(){
        	 wallpaper.src = "https://i.ibb.co/4PZJBvQ/Night-Sky.jpg";
             fotonimasi.src = "https://feeldreams.github.io/nimasi.gif";
-       	 audio = new Audio('https://cf-media.sndcdn.com/OrulmQPqMX4w.128.mp3?Policy=eyJTdGF0ZW1lbnQiOlt7IlJlc291cmNlIjoiKjovL2NmLW1lZGlhLnNuZGNkbi5jb20vT3J1bG1RUHFNWDR3LjEyOC5tcDMqIiwiQ29uZGl0aW9uIjp7IkRhdGVMZXNzVGhhbiI6eyJBV1M6RXBvY2hUaW1lIjoxNzAyMjgzOTA0fX19XX0_&Signature=VLXOUYcJhc2g2JHl3jAboD6A6WVDd7mzaRxcmnXmCiFMonxQ~LwxvSZJc6APln8fjapk94NLA~LtwCT1B2i7owZQam5eN6hqc0FpTWGZGKNWCwsIAuJh3d1o66Z9YNwd~NrcGNHJff9GavdOW9keqY7gp51hCe2JS0-DqEC4L9jB0XseshAFJJI22EXcltyKPK7HXGedcC-QQxVh28pGnqszEFaX8I2q9OiQyMZxWyYI~pxam8BTICNidsTapy3e1nLTmjLcgWwjpfvRTZD5aqQRkdiXMJ-uqtqrUkcwcxrbIEI-IMxzTO7IPtamBROZ7rOYKqu2QCumqcnOF~CcPA__&Key-Pair-Id=APKAI6TU7MMXM5DG6EPQ');
+       	 audio = new Audio('https://cf-media.sndcdn.com/OrulmQPqMX4w.128.mp3?Policy=eyJTdGF0ZW1lbnQiOlt7IlJlc291cmNlIjoiKjovL2NmLW1lZGlhLnNuZGNkbi5jb20vT3J1bG1RUHFNWDR3LjEyOC5tcDMqIiwiQ29uZGl0aW9uIjp7IkRhdGVMZXNzVGhhbiI6eyJBV1M6RXBvY2hUaW1lIjoxNzAyMjg1MDI5fX19XX0_&Signature=c8hHX0r9gCqe8SLw3kknVObQEW9nPlXoi8R3hGJmPsJzj6sfrMMDcpbhOzUOeplmDGdtU72TW~8kPWjmIKXufYrUcSy1DTlmkGwZePvR-T1SZfaB~hvmqwqdUVUdg6~5ivTylqhF1NXXCYiA-djhDWeYucP1lij4Tp2pnVSxMs6yFTMJKrsUt6ZHVKMpuyN4nGTCsNfbAR1VWAT~d~8lJzHnbu7Rj2axZGYkrR4siDm3KRoU1MC9YlbVqOXgO8y-S582yFC3407LMaU1fPYlDXElzeO-XMeQ92DWabi3EfTOguwgIVNhhbHrbRYCk8~qnrTdiDGPXO7g3jZXlSd7WA__&Key-Pair-Id=APKAI6TU7MMXM5DG6EPQ');
        
             akhirkata = "Semoga di hari spesialmu ini, kamu menjadi pribadi yang lebih baik yaaa 🥳      ";
             akhirkata2 = "Happy Birthday!!!";
